--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </h1>
       <div id="convertContainer">
         <label for="inputTemperature">Type in temperature value to convert:
-          <input id="inputTemperature" type="number" placeholder="temperature"/>
+          <input id="inputTemperature" type="number" placeholder="temperature..."/>
           <select id="select">
             <option value="Celsius">
               Celsius to Fahrenheit
